# lz4stream

./: AUTHORS  COPYRIGHT  Makefile.am  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  liblz4stream-dev.install  liblz4stream0.install  rules
src/: Makefile.am  lz4stream.c  lz4stream.h  xxhash.c  xxhash.h
